modified settings in function.php. Webpack is now using different ports, so I can have multiple devservers running. Added a lot of fonts to my site. Styled Header and Footer a bit. Fixed the issue, that header from fictional-university would overlap with my sites header

--- a/wp-content/themes/clubitsolutions-child_theme/assets/fictional-university/css/modules/site-footer.scss
+++ b/wp-content/themes/clubitsolutions-child_theme/assets/fictional-university/css/modules/site-footer.scss
@@ -1,4 +1,4 @@
-.site-footer {
+footer.fictional-university__site-footer {
   padding: 2rem 0 3.5rem 0;
   background-image: linear-gradient(#fff, #ececec);
 
