--- a/wp-content/themes/clubitsolutions-child_theme/src/sass/style.scss
+++ b/wp-content/themes/clubitsolutions-child_theme/src/sass/style.scss
@@ -8,26 +8,5 @@ Template:       clubitsolutions-theme
 Version:        0.1.0
 */
 
-// RESPONSIVE BREAKPOINTS
-$bp-largest: 75em;   // 1200px
-$bp-large: 62.5em;   // 1000px
-$bp-medium: 50em;    // 800px;
-$bp-small: 37.5em;    // 600px;
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-  font-size: 100%; // 10px/16px = 62.5% -> 1rem = 10px
-
-  @media only screen and (max-width: $bp-largest) {
-    font-size: 80%;
-  }
-}
-
+@import "base";
+@import "layout";
